--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,19 @@
 {
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/socket.io/(.*)",  // Matches all requests to /socket.io
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
       ]
+    }
+  ],
+  "routes": [
+    {
+      "src": "/socket.io/(.*)",
+      "dest": "/server.js"
     }
   ]
 }
