--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,8 +3,8 @@
     {
       "source": "/socket.io/(.*)",
       "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://https://web-rtc-app-b53q.vercel.app/" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,POST,OPTIONS" },
         { "key": "Access-Control-Allow-Headers", "value": "Content-Type" },
         { "key": "Access-Control-Allow-Credentials", "value": "true" }
       ]
